<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFDFDF" >

    <LinearLayout
        android:id="@+id/linearLayout_focus"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:id="@+id/layout_config"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serial_config" />

            <com.df.serial.dafeng_serial_debug.CustomSpinner
                android:id="@+id/spinner_serial_num"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <com.df.serial.dafeng_serial_debug.CustomSpinner
                android:id="@+id/spinner_serial_baud_rate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/check_switcher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/open" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_config" />

            <CheckBox
                android:id="@+id/check_recv_new_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_newline" />

            <CheckBox
                android:id="@+id/check_recv_hex_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex_display" />
        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_config" />

                <CheckBox
                    android:id="@+id/check_send_hex_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_by_hex" />

                <CheckBox
                    android:id="@+id/check_send_loop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_loop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_duration" />

                    <EditText
                        android:id="@+id/text_send_loop_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@string/num_1000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msec" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/layout_config" >

        <LinearLayout
            android:id="@+id/layout_send_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dip"
            android:orientation="horizontal"
            android:weightSum="6" >

            <LinearLayout
                android:id="@+id/no_focus"
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" />

            <EditText
                android:id="@+id/text_send_msg"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:inputType="textMultiLine"
                android:nextFocusDown="@+id/no_focus" />

            <Button
                android:id="@+id/btn_clear_dis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_dis"
                android:minLines="3" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minLines="3"
                android:text="@string/send" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_recv_text_dis"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/layout_send_area"
            android:background="#ffffff"
            android:scrollbars="vertical" >

            <TextView
                android:id="@+id/text_recv_msg_dis"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="#ffffff" />
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>